# killlua

./: .gitignore  CMakeLists.txt  add_plugin_logic.js  before.lasm  core.py  deob.lasm  diff.patch  fix_apply.js  flattened.lasm  parse_dot.js  patch_asm.js  patch_cfg.js  patch_deflatten_fix_git.py  patch_ignore.js  patch_providers.js  patch_pseudo.js  patch_validate.js  sclisp.lua  test.lasm  test.lua  test.luac  test_asm.lasm  test_asm.lua  test_asm.luac  test_asm2.lasm  test_asm2.luac  test_cfg  test_cfg.js  test_mod  test_plugin_ui.js  test_struct  update.patch  update_monaco.js  update_plugins_ui.js  平坦化控制流.lua
.github/workflows/: build-and-release.yml
build_native/: CMakeCache.txt  Makefile  cmake_install.cmake  deob.lasm  lua_deobfuscator_cpp
build_wasm/: CMakeCache.txt  Makefile  cmake_install.cmake  lua_deobfuscator.js  lua_deobfuscator.wasm
lua-5.3.6/: README
lua-5.3.6/doc/: manual.html
lua-5.3.6/src/: lapi.c  lauxlib.c  lcode.c  ldebug.c  liolib.c  llex.c  lobject.c  lparser.c  lua  lua.c  luac  luac.c  lundump.c
lua_deobfuscator/: __init__.py  cfg.py  deobfuscator.py  disassembler.py  lua53_serializer.py  opcodes.py  parser.py  serializer.py
src/: main.cpp
src/lua_deobfuscator/: Assembler.cpp  Assembler.h  ByteUtils.h  CFG.cpp  CFG.h  Deobfuscator.cpp  Deobfuscator.h  Disassembler.cpp  Disassembler.h  LuaTypes.h  Opcodes.cpp  Opcodes.h  Parser.cpp  Parser.h  Serializer.cpp  Serializer.h
web/: index.html  lua_deobfuscator_web.html  merge_web.py  plugin_test.c  plugin_test.wasm
